variation_study/mistral_temp1.0/run1/modern_envoy_003.yaml
# Generated by ollama (mistral)
# Prompt: Create Envoy configuration with HTTP filters for request processing. Define filter chains including router filter for traffic routing. Set up retry policies and timeout configurations for backend connections. This is for our service mesh data plane.
# Category: envoy_authz_filter_missing

apiVersion: envoy.io/v3
kind: NetworkFilterConfig
name: my-service-mesh
type: cluster
filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: my_service_mesh
        codec_system: auto
        routeConfiguration:
          name: local_route
          virtualHosts:
            - domains: ["*"]
              routes:
                - match:
                    prefix: "/"
                  routeAction:
                    cluster: my-backend-cluster
        transportSockets:
          - name: envoy.sockets.tls
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              commonTlsContext:
                tlsMinimumProtocolVersion: TLS12
          - name: envoy.sockets.socket
        connectionPool:
          maxConnectionsPerRoute: 100
          maxRequestsPerConnection: 10000
        http1ProtocolOptions: {}
    - name: envoy.filters.http.router
      typedConfig:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3beta1.Router
        routes:
          - match:
              prefix: "/"
            routeAction:
              clusterName: my-backend-cluster
    - name: envoy.filters.network.retry_policy
      typedConfig:
        "@type": type.googleapis.com/envoy.extensions.filters.network.retry_policy.v3.RetryPolicy
        maxRetries: 5
        retryDelayFactor: 2
    - name: envoy.filters.http.timeout_budget
      typedConfig:
        "@type": type.googleapis.com/envoy.extensions.filters.http.timeout_budget.v3.TimeoutBudget
        timeoutDurationSecs: 60
